scripts/traefik/map-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: map-ingressroute
  namespace: openunison
spec:
  entryPoints:
    - web
    #- websecure
  routes:
    - match: Host(`localhost`) && Header('X-Forwarded-Host','symmetrical-chainsaw-wprx7qggpgfwgj-443.app.github.dev')
      kind: Rule
      services:
        - name: openunison-orchestra
          port: 80
      middlewares:
        - name: map-host
